# vaidya-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  app.py  cloudbuild.yaml  debug_test.py  deploy.sh  index.html  out.txt  pyproject.toml  python_dump.txt  requirements.txt
static/: manifest.json
templates/: index.html
tests/: conftest.py  test_app.py
