[project]
name = "vaidya-bridge"
version = "2.0.0"
description = "Universal AI health bridge for rural India — Gemini-powered"
requires-python = ">=3.11"
authors = [{ name = "niranjan-ellur" }]
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing --cov-fail-under=80"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A"]
ignore = ["S101", "S324"]   # allow assert in tests, md5 non-crypto

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
